# studyRust

./: 202510_study_memo.txt  README.md
arithmetic-operations-quiz/: Cargo.toml
arithmetic-operations-quiz/src/: main.rs
calculator-with-memory-function/: Cargo.toml
calculator-with-memory-function/src/: main.rs
calender/: Cargo.toml  schedule.json
calender/src/: main.rs
kakeibo/: Cargo.toml  README.md
kakeibo/src/: main.rs
my_library/: Cargo.toml
my_library/src/: lib.rs
parallel-add/: Cargo.toml
parallel-add/src/: main.rs
simple-poker/: Cargo.toml
simple-poker/src/: main.rs
thumbnail-tool/: .gitignore  Cargo.toml
thumbnail-tool/src/: main.rs
todoapps/: Cargo.toml
todoapps/src/: main.rs
todoapps/templates/: hello.html  todo.html
