[package]
name = "calender"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
rstest = "0.26.1"
